# play-cpp-sdk

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  NOTICE  README.md  install.sh  integration_test.sh  msys_build.sh  windows_build.bat  windows_install.bat
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/actions/android/: action.yml
.github/workflows/: android-build.yml  audit.yml  ci.yml  clang-format-check.yml  codeql-analysis.yml  cpp-lint.yml  ios-build.yml  lint.yml  linux-build.yml  linux-libc++-build.yml  linux-libstdc++-build.yml  mac-build.yml  mac_x86_64-build.yml  macarm64-build.yml  semgrep.yml  test.yml  win-build.yml
demo/: .env  CMakeLists.txt  CMakeSettings.json  Makefile  demo.sln  demo.vcxproj  demostatic.vcxproj  extra.cc  extra.h  get_erc20_transfer_history_blocking.cc  get_erc721_transfer_history_blocking.cc  helper.py  main.cc  new_wallet.cc  package.json  pre_build.bat  restore_wallet.cc  server.js  windows_build.bat
demo/demo/: demo.vcxproj
demo/demostatic/: demostatic.vcxproj
demo/examples/: CMakeLists.txt
demo/examples/src/: chainmain_bank_send.cc  chainmain_nft.cc  create_payment.cc  erc1155.cc  erc20.cc  erc721.cc  eth.cc  eth_login.cc  get_erc20_transfer_history_blocking.cc  get_erc721_transfer_history_blocking.cc  get_token_holders.cc  get_token_transfers_blocking.cc  get_tokens_blocking.cc  get_wallet.cc  new_wallet.cc  restore_wallet.cc  uint.cc  wallet_connect.cc
demo/sdk/: CMakeLists.txt
docs/: Doxyfile  SUMMARY.md.tmpl  config.json
docs/docs_pages/: mainpage.md
extra-cpp-bindings/: Cargo.toml  README.md  build.rs
extra-cpp-bindings/include/: pay.h  walletconnectcallback.h
extra-cpp-bindings/src/: error.rs  lib.rs  pay.cc  pay.rs  registry.json  wallectconnectregistry.rs  walletconnect.rs  walletconnect2.rs  walletconnectcallback.cc
play-cpp-sdk/: Cargo.toml  README.md
play-cpp-sdk/src/: lib.rs
wallet-connect/: Cargo.toml  README.md
wallet-connect/examples/: web3.rs  web3_v2.rs
wallet-connect/src/: client.rs  crypto.rs  hex.rs  lib.rs  serialization.rs  uri.rs
wallet-connect/src/client/: core.rs  options.rs  session.rs  socket.rs
wallet-connect/src/crypto/: aead.rs  key.rs
wallet-connect/src/protocol/: message.rs  rpc.rs  topic.rs
wallet-connect/src/v2/: client.rs  core.rs  crypto.rs  mod.rs  protocol.rs  session.rs
