[package]
name = "extra-cpp-bindings"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib", "rlib", "cdylib"]

[dependencies]
anyhow = "1"
cxx = "1"
ethers = { version = "0.17", features = ["rustls"] }
eyre = "0.6"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = "1"
serde_json = { version = "1", features = ["arbitrary_precision"] }
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
defi-wallet-connect= { path="../wallet-connect" }
url = { version = "2", features = ["serde"] }
hex="0.4.3"
qrcodegen= "1.8"


[build-dependencies]
# Wait until https://github.com/dtolnay/cxx/pull/1048 is merged or similar solution is found
cxx-build = { git = "https://github.com/crypto-com/cxx.git", rev = "0cbae78a33dadbc601448c3b9cb955df568793ef", features=["doxygen"] }


[dev-dependencies]
sha2 = "0.10"
hex-literal="0.3"
