[package]
name = "extra-cpp-bindings"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib", "rlib", "cdylib"]

[dependencies]
anyhow = "1"
cxx = "1"
ethers = { version = "=2.0.0", features = ["rustls"] }
ethers-addressbook = { version = "=2.0.0"}
ethers-contract = { version = "=2.0.0" }
ethers-core = { version = "=2.0.0" }
ethers-etherscan = { version = "=2.0.0" }
ethers-middleware = { version = "=2.0.0" }
ethers-providers = { version = "=2.0.0"}
ethers-signers = { version = "=2.0.0" }
ethers-solc = { version = "=2.0.0"}

eyre = "0.6"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = "1"
serde_json = { version = "1", features = ["arbitrary_precision"] }
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
defi-wallet-connect= { path="../wallet-connect" }
url = { version = "2", features = ["serde"] }
hex="0.4.3"
qrcodegen= "1.8"
defi-wallet-core-cpp= { path="../defi-wallet-core-rs/bindings/cpp"}
defi-wallet-core-common= { path="../defi-wallet-core-rs/common"}

[build-dependencies]
cxx-build = "1"


[dev-dependencies]
sha2 = "0.10"
hex-literal="0.3"
uuid = "1"
