[package]
name = "play-cpp-sdk"
version = "0.0.12-alpha"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defi-wallet-core-cpp = { path = "../defi-wallet-core-rs/bindings/cpp/", version = "0.3.1"}
extra-cpp-bindings = { path = "../extra-cpp-bindings/"}

[lib]
crate-type = ["staticlib", "cdylib"]
